@@ -147,6 +147,9 @@ Release 0.21.0 - Unreleased
     HADOOP-6303. Eclipse .classpath template has outdated jar files and is
     missing some new ones.  (cos)
 
+    HADOOP-6396. Fix uninformative exception message when unable to parse
+    umask. (jghoman)
+
   NEW FEATURES
 
     HADOOP-4268. Change fsck to use ClientProtocol methods so that the
